Include PDF file filter; open multiple files support